src/index.css
/* ABOUT Tab */
.bgimage {
  height: 100vh;
  background: url("https://user-images.githubusercontent.com/115055273/236050682-6b743fee-84e7-4b6c-88f7-42a86397af12.jpg");
  background-size: cover;
  position: relative;
}

.hero_title {
  font-size: 4.5rem;
}

.hero_desc {
  font-size: 2rem;
}

.hero-text {
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
}

/* nav bar */
.nav-item {
  font-size: 1.5rem;
  position: relative;
  justify-content: right;
}
.navbar-brand {
  font-size: large;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  margin-left: -250px;
  font-weight: bolder;
  color: crimson;
  text-align: center;
  display: block;
}
.nav.nav-tabs {
  margin-right: -250px;
}

.navbar .navbar-brand > .navbar-item,
.navbar .navbar-brand .navbar-link {
  display: inline-block;
}

body {
  font-family: Arial, Helvetica, sans-serif;
  text-align: center;
  font-family: Georgia, "Times New Roman", Times, serif;
  font-size: xx-large;
  /* background-color: aliceblue; */
}

/* Contact Form */
.contactimage {
  height: 100vh;
  background: url("https://user-images.githubusercontent.com/115055273/236085327-0620255c-949b-40fe-ae3d-acfff85e04ec.jpg");
  background-size: cover;
  position: relative;
}

.form {
  margin: 20px;
  width: 600px;
}

.form input {
  display: block;
  margin-top: 25px;
  margin-bottom: 5px;
  width: 100%;
}


.form #message {
  height: 100px;
}

@media only screen and (max-width: 1024px) {
  main {
    margin-top: 2em;
    margin-bottom: 2em;
    margin-left: 2em;
    margin-right: 2em;
  }
}


/* RESUME Tab */
.resumeimage {
  height: 100vh;
  background: url("https://user-images.githubusercontent.com/115055273/236084443-76696f0c-2709-413e-94a4-838177088cc8.jpg");
  background-size: cover;
  position: relative;
}
ul {
  list-style-type: none;
}
.column {
color:black;
}

#download {
color:crimson;
text-decoration: none;
}

#download :active{
text-decoration: none;
}

#download :visited{
text-decoration: none;
}

#download :link{
text-decoration: none;
}

/* Portfolio Tab */
.image {

  max-width:  100%;
  max-height: 100%;

}

